--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
     "@mdx-js/mdx": "^1.6.6",
     "@mdx-js/react": "^1.6.6",
     "gatsby": "^2.18.6",
+    "gatsby-background-image": "^1.1.1",
+    "gatsby-image": "^2.4.9",
     "gatsby-plugin-emotion": "^4.3.6",
     "gatsby-plugin-mdx": "^1.2.18",
     "gatsby-plugin-react-helmet": "^3.3.6",
+    "gatsby-plugin-sharp": "^2.6.14",
+    "gatsby-remark-images": "^3.3.13",
     "gatsby-source-filesystem": "^2.3.14",
+    "gatsby-transformer-sharp": "^2.5.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0"
